# obsidian-toolbox

./: .gitignore  .markdownlint.json  .markdownlintignore  .pymarkdown  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.beads/: metadata.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
specs/001-kindle-mcp-server/: plan.md  spec.md  tasks.md
specs/002-parse-md-highlights/: plan.md  spec.md  tasks.md
specs/003-book-index-prompt/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-rename-highlight-annotation/: spec.md
specs/005-anki-cards-export/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-parse-zotero-annotations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-fix-zotero-word-concat/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-kindle-import-prompt/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-kindle-import-file-passing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-boox-parser/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-epub-figure-extract/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-boox-import-prompt/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-pdf-figure-extract/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-merge-split-annotations/: plan.md  quickstart.md  (+3 more)
tests/: test_anki.py  test_boox_parser.py  test_cli.py  test_cli_boox.py  test_cli_md.py  test_cli_zotero.py  test_epub_figures.py  test_mcp_server.py  test_md_parser.py  test_md_writer.py  test_parser.py  test_pdf_figures.py  test_word_fixer.py  test_zotero_parser.py
(+59 files in other folders)
