[project]
name = "obsidian-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
]

[project.scripts]
otb = "otb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/otb"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
