[project]
name = "obsidian-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.1",
    "mcp>=1.0.0",
]

[project.scripts]
otb = "otb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/otb"]

[tool.pylint.messages_control]
disable = [
    "redefined-outer-name",  # standard pytest fixture pattern
]

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
]
